Thu Sep 10 21:22:01 2009  Tanaka Akira  <akr@fsij.org>

	* test/dl/test_cptr.rb (test_free=): test SEGV at first.
	  [ruby-dev:39269]

Tue Mar  3 15:05:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/lib/dl/value.rb (DL::ValueUtil#wrap_arg): NULL for nil.

Tue Sep  8 08:32:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl/test_{cfunc,ptr}.rb: added tests from Aaron Patterson.
	  see [ruby-dev:39249].

Tue Mar  3 15:03:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl: moved from ext/dl/test.

Sat Sep  5 10:38:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): &&= and ||= should return rhs.
	  [ruby-dev:39163] (#1996), [ruby-core:25143]

Fri Sep  4 04:46:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/httpservlet/abstract.rb (do_OPTIONS): method names
	  are symbols now.  [ruby-core:24580]

Sun Mar 15 09:17:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (.y.c): use SRC_FILE which contains slashes instead of
	  backslashes.  [ruby-core:22891]

Tue Sep  1 19:56:28 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): fix to check local_table_size.
	  [ruby-dev:39205] [Bug #2024]

Sun Aug 30 16:38:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname2_p): not depend on nul terminator.

Sun Aug 30 01:15:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read_all): use gzfile_newstr;
	  set and convert its encoding. [ruby-dev:38304]

Thu Aug 27 18:31:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_remove_method_id): exported.

	* numeric.c (num_sadded): fix for non-ascii method name.

Thu Aug 27 08:16:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_set_string): set string should not be
	  dupped or frozen, because freezing it causes #concat method failure,
	  and unnecessary to dup without freezing.  a patch from Aaron
	  Patterson at [ruby-core:25145].
